--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h1>Hello, <%= name %>!</h1>
-        <p>HTML is so much better than a plain string!</p>
+        <p>This site was accessed at <%= datestring %></p>
+        <p>You are visitor #<%= visitorId %></p>
+        <p><%= lastVisited %></p>
     </body>
 </html>
